@@ -2,6 +2,7 @@ Please view this file on the master branch, on branches it may be out of date.
 
 v 1.4.0 (unreleased)
   - added support for FOSUserBundle
+  - added FOSUserBundle fixtures for development mode
 
 v 1.3.0 (unreleased)
   - fixed an issue with executing migrations / fixtures even if none existed
